!postgres-operator/ui/basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: postgres-operator-ui-basic-auth
spec:
  basicAuth:
    secret: postgres-operator-ui-basic-auth
