!postgres-operator/ui/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgres-operator-ui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`psql.kentaro1043.com`)
      services:
        - name: postgres-operator-ui
          port: 80
      middlewares:
        - name: postgres-operator-ui-basic-auth
  tls:
    secretName: postgres-operator-ui-tls
